--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <div class="año"> <box-icon type='solid' name='calendar'></box-icon><strong>abril 2022-
                                     Setiembre
                                     2022</strong></div>
-                            <h3><strong>Teleoperadore:</strong> Plataformas de Inversiones INVESTQ</h3>
+                            <h3><strong>Teleoperador:</strong> Plataformas de Inversiones INVESTQ</h3>
                             <p>
                                 <li>Conversión de clientes </li>
                                 <li>Retención</li>
@@ -290,7 +290,7 @@
     <!-- section Contacto -->
     <section class="contact" id="contacto">
         <h2 class="heading">Conta<span>ctame</span></h2>
-        <form id="form" action="https://formsubmit.co/b0c6970ca11e5a331aa22941c9c2fc 0d " method="POST" >
+        <form id="form" action="crokker2023@gmail.com" method="POST" >
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" placeholder="Nombre Completo" name="name" required>
@@ -303,7 +303,7 @@
             </div>
             <div class="input-box">
                 <div class="input-field">
-                    <input type="number" placeholder="Telefono" name="telefono" required>
+                    <input type="number" placeholder="Telefono" name="telefono" >
                     <span class="focus"></span>
                 </div>
                 <div class="input-field">
