--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     <!-- section Contacto -->
     <section class="contact" id="contacto">
         <h2 class="heading">Conta<span>ctame</span></h2>
-        <form id="form" action="crokker2023@gmail.com" method="POST" >
+        <form id="form" name="contact" action="crokker2023@gmail.com"  method="POST" netlify >
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" placeholder="Nombre Completo" name="name" required>
