--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     <!-- section Contacto -->
     <section class="contact" id="contacto">
         <h2 class="heading">Conta<span>ctame</span></h2>
-        <form id="form" name="contact" method="POST" data-netlify="true >
+        <form id="form" name="contact" method="POST" data-netlify="true" >
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" placeholder="Nombre Completo" name="name" required>
