--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
 
 <body>
     <!-- header desing -->
-    <header class="header">
+    <header class="header ">
         <a href="#" class="logo"><strong>Nestor.</strong></a>
-
         <div class="bx bx-menu" id="menu-icon"></div>
-
-
-        <nav class="navbar">
+        <nav class="navbar" >
             <a href="#home" class="active"><strong>Home</strong></a>
-            <a href="#sobremi"><strong>Sobre Mi</strong></a>
+            <a href="#sobremi" ><strong>Sobre Mi</strong></a>
             <a href="#experiencia"><strong>Educacion</strong></a>
             <a href="#skills"><strong>Skills</strong></a>
             <a href="#contacto"><strong>Contacto</strong></a>
@@ -325,7 +322,7 @@
     <!-- fooster -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright&copy; 2023 by Codehal |All Rights Reserved.</p>
+            <p>Copyright&copy; 2023 by Nestor Olivera |All Rights Reserved.</p>
         </div>
         <div class="footer-iconTop">
             <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
