Recuperar pdf curriculum

--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
 
 <body>
     <!-- header desing -->
-    <header class="header">
+    <header class="header ">
         <a href="#" class="logo"><strong>Nestor.</strong></a>
-
         <div class="bx bx-menu" id="menu-icon"></div>
-
-
-        <nav class="navbar">
+        <nav class="navbar" >
             <a href="#home" class="active"><strong>Home</strong></a>
-            <a href="#sobremi"><strong>Sobre Mi</strong></a>
+            <a href="#sobremi" ><strong>Sobre Mi</strong></a>
             <a href="#experiencia"><strong>Educacion</strong></a>
             <a href="#skills"><strong>Skills</strong></a>
             <a href="#contacto"><strong>Contacto</strong></a>
@@ -110,7 +107,7 @@
                             <div class="año"> <box-icon type='solid' name='calendar'></box-icon><strong>abril 2022-
                                     Setiembre
                                     2022</strong></div>
-                            <h3><strong>Teleoperadore:</strong> Plataformas de Inversiones INVESTQ</h3>
+                            <h3><strong>Teleoperador:</strong> Plataformas de Inversiones INVESTQ</h3>
                             <p>
                                 <li>Conversión de clientes </li>
                                 <li>Retención</li>
@@ -290,7 +287,7 @@
     <!-- section Contacto -->
     <section class="contact" id="contacto">
         <h2 class="heading">Conta<span>ctame</span></h2>
-        <form id="form" action="https://formsubmit.co/crokker2023@gmail.com" method="POST" >
+        <form id="form" name="contact" method="POST" data-netlify="true" >
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" placeholder="Nombre Completo" name="name" required>
@@ -303,7 +300,7 @@
             </div>
             <div class="input-box">
                 <div class="input-field">
-                    <input type="number" placeholder="Telefono" name="telefono" required>
+                    <input type="number" placeholder="Telefono" name="telefono" >
                     <span class="focus"></span>
                 </div>
                 <div class="input-field">
@@ -325,7 +322,7 @@
     <!-- fooster -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright&copy; 2023 by Codehal |All Rights Reserved.</p>
+            <p>Copyright&copy; 2023 by Nestor Olivera |All Rights Reserved.</p>
         </div>
         <div class="footer-iconTop">
             <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
