Solucionar error toggle

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Nestor</title>
-
+<!-- link de stylos -->
     <link rel="stylesheet" href="style.css">
 
     <!-- boxicons -->
@@ -15,13 +15,13 @@
 </head>
 
 <body>
-    <!-- header desing -->
+    <!-- Aqui encontraremos la barra de navegacion -->
     <header class="header ">
         <a href="#" class="logo"><strong>Nestor.</strong></a>
         <div class="bx bx-menu" id="menu-icon"></div>
-        <nav class="navbar" >
+        <nav class="navbar">
             <a href="#home" class="active"><strong>Home</strong></a>
-            <a href="#sobremi" ><strong>Sobre Mi</strong></a>
+            <a href="#sobremi"><strong>Sobre Mi</strong></a>
             <a href="#experiencia"><strong>Educacion</strong></a>
             <a href="#skills"><strong>Skills</strong></a>
             <a href="#contacto"><strong>Contacto</strong></a>
@@ -30,7 +30,7 @@
         </nav>
     </header>
 
-    <!-- home section desing -->
+    <!-- Diseño de la seccion de Inicio -->
 
     <section class="home" id="home">
         <div class="home-content">
@@ -40,24 +40,24 @@
             </div>
             <br>
             <div class="btn-box">
-
+                <!-- boton para descargar curriculum -->
                 <a href="Cv/Nestor Programador Fullstrack.pdf" class="btn" download="Curriculum"
                     target="_blank">Curriculum</a>
             </div>
 
         </div>
-
+<!-- botones para redireccionar a mis redes -->
         <div class="home-sci">
             <a href="https://www.linkedin.com/in/n%C3%A9storolivera/" target="_blank"><i
                     class='bx bxl-linkedin'></i></a>
             <a href="mailto:crokker2023@gmail.com" target="_blank"><i class='bx bxl-gmail'></i></a>
-            
+
             <a href="https://github.com/Crokker23" target="_blank"><i class='bx bxl-github'></i></a>
         </div>
 
 
     </section>
-    <!-- about secion desing -->
+    <!-- seccion informacion sobre mi -->
     <section class="about" id="sobremi">
         <h2 class="heading"> Sobre <span>Mi</span></h2>
 
@@ -78,7 +78,7 @@
         </div>
     </section>
 
-    <!-- Seccion educacion -->
+    <!-- Seccion de Experiencia laboral -->
     <section class="experiencia" id="experiencia">
         <h2 class="heading">Mis <span>Datos</span></h2>
         <div class="experiencia-row">
@@ -153,7 +153,7 @@
                 </div>
             </div>
 
-
+<!-- seccion de Estudios  -->
             <div class="experiencia-colum">
                 <h3 class="titulo">Estudios</h3>
                 <div class="experiencia-box">
@@ -192,7 +192,6 @@
                                     <li>SQL</li>
                                     <li>MySQL</li>
                                     <li>MongoDB</li>
-                                    <li>MySQL</li>
                                 </td>
                                 <td><strong><span>Machine Learning:</span></strong>
                                     <li>Pandas</li>
@@ -222,7 +221,7 @@
         </div>
     </section>
 
-    <!-- skill section -->
+    <!-- seccion skill  -->
     <section class="skills" id="skills">
         <h2 class="heading">Mi <span>Skills</span></h2>
         <div class="skills-row">
@@ -284,10 +283,10 @@
 
 
 
-    <!-- section Contacto -->
+    <!-- seccion de  Contacto -->
     <section class="contact" id="contacto">
         <h2 class="heading">Conta<span>ctame</span></h2>
-        <form id="form" name="contact" method="POST" data-netlify="true" >
+        <form id="form" name="contact" method="POST" data-netlify="true">
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" placeholder="Nombre Completo" name="name" required>
@@ -300,7 +299,7 @@
             </div>
             <div class="input-box">
                 <div class="input-field">
-                    <input type="number" placeholder="Telefono" name="telefono" >
+                    <input type="number" placeholder="Telefono" name="telefono">
                     <span class="focus"></span>
                 </div>
                 <div class="input-field">
@@ -317,7 +316,7 @@
                 <button type="submit" class="btn">Enviar</button>
             </div>
         </form>
-       
+
     </section>
     <!-- fooster -->
     <footer class="footer">
@@ -329,7 +328,7 @@
         </div>
 
     </footer>
-
+<!-- link de main  -->
     <script src="main.js"></script>
 
 </body>
