--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <br>
             <div class="btn-box">
                 <!-- boton para descargar curriculum -->
-                <a href="Cv/Curriculum Nestor.pdf" class="btn" download="Curriculum"
+                <a href="Cv/Nestor Joaquin Olivera Crokker .pdf" class="btn" download="Curriculum"
                     target="_blank">Curriculum</a>
             </div>
 
