--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 eficaz y comprometido con el trabajo en equipo. La gastronomía es un campo que exige una gran atención
                 al detalle, la capacidad de trabajar en un entorno de ritmo rápido y la habilidad para mantener la calma
                 bajo presión, habilidades que pudo transferir al mundo de la programación. <br> <br>
-                Además, la gastronomía me ha enseñado a ser creativo ya pensar fuera de la caja, habilidades que son muy
+                Además, la gastronomía me ha enseñado a ser creativo y a pensar fuera de la caja, habilidades que son muy
                 valiosas en el campo de la programación y el desarrollo de software</p>
         </div>
     </section>
@@ -104,7 +104,7 @@
 
                     <div class="experiencia-contenedor">
                         <div class="contenedor">
-                            <div class="año"> <box-icon type='solid' name='calendar'></box-icon><strong>abril 2022-
+                            <div class="año"> <box-icon type='solid' name='calendar'></box-icon><strong>Abril 2022-
                                     Setiembre
                                     2022</strong></div>
                             <h3><strong>Teleoperador:</strong> Plataformas de Inversiones INVESTQ</h3>
@@ -157,18 +157,6 @@
             <div class="experiencia-colum">
                 <h3 class="titulo">Estudios</h3>
                 <div class="experiencia-box">
-                    <div class="experiencia-contenedor">
-                        <div class="contenedor">
-                            <div class="año"> <box-icon type='solid' name='calendar'></box-icon><strong>2015 -
-                                    2018</strong></div>
-                            <h3>Instituto Uruguayo Gastronómico UG, Punta del este, Uruguay
-                            </h3>
-                            <p>
-                                <li>Técnico Gastronomía</li>
-
-                            </p>
-                        </div>
-                    </div>
 
 
                     <div class="experiencia-contenedor">
@@ -216,6 +204,28 @@
                             </p>
                         </div>
                     </div>
+                    <div class="experiencia-contenedor">
+                        <div class="contenedor">
+                            <div class="año"> <box-icon type='solid' name='calendar'></box-icon><strong>2015 -
+                                    2018</strong></div>
+                            <h3>Instituto Uruguayo Gastronómico UG, Punta del este, Uruguay
+                            </h3>
+                            <p>
+                                <td><strong><span>Técnico Gastronomía:</span></strong>                             
+                                <li>Cocina / Pastelería / Panadería</li>
+                                <li>Marketing / Administración de Personal / Organización y
+                                        Planificación de Eventos </li>
+                                <li> Principios de Administración / Administración de Procesos
+                                    Gastronómicos</li>
+                                <li>Costos y Presupuestación / Legislación Técnico Tributaria</li>                                                      
+                                </td>
+                                
+
+                            </p>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
